[gd_scene load_steps=20 format=4 uid="uid://oxnlrlkqkmk2"]

[ext_resource type="Script" uid="uid://c8wjlwtfcbu04" path="res://Kiosk (restaurant)/Scripts/end_of_day.gd" id="1_vapah"]
[ext_resource type="TileSet" uid="uid://b8finquyyyrf3" path="res://Market (shops, items)/Assets/ui.tres" id="2_xgdu4"]
[ext_resource type="FontFile" uid="uid://dcyhga4jkbicf" path="res://intro/assets/market/Press_Start_2P/PressStart2P-Regular.ttf" id="3_t2kod"]
[ext_resource type="FontFile" uid="uid://bq2bb101i2nj0" path="res://Market (shops, items)/Assets/ByteBounce.ttf" id="4_pb7u7"]
[ext_resource type="Texture2D" uid="uid://duu58nxtq0ga2" path="res://Kiosk (restaurant)/Assets/CONTINUE/2.png" id="5_8ik8l"]
[ext_resource type="Texture2D" uid="uid://dsgj1wrd7qi0y" path="res://Kiosk (restaurant)/Assets/CONTINUE/1.png" id="5_x27pt"]
[ext_resource type="Texture2D" uid="uid://brvskpjjouaho" path="res://Kiosk (restaurant)/Assets/QUIT/1.png" id="6_1lthg"]
[ext_resource type="Texture2D" uid="uid://mf41qu30wqpq" path="res://Kiosk (restaurant)/Assets/CONTINUE/3.png" id="6_y4y66"]
[ext_resource type="Texture2D" uid="uid://do5w64y6g22dv" path="res://Kiosk (restaurant)/Assets/QUIT/2.png" id="8_1365e"]
[ext_resource type="Texture2D" uid="uid://b38eyc3dgr7ni" path="res://Kiosk (restaurant)/Assets/QUIT/3.png" id="9_sgdw8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgdu4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2kek1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_25iga"]
texture = ExtResource("5_8ik8l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ao0as"]
texture = ExtResource("6_y4y66")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ik8l"]
texture = ExtResource("5_x27pt")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ow6ah"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f8waa"]
texture = ExtResource("8_1365e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kha7j"]
texture = ExtResource("9_sgdw8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y4y66"]
texture = ExtResource("6_1lthg")

[node name="EndOfDay" type="PopupPanel"]
auto_translate_mode = 1
position = Vector2i(295, 0)
size = Vector2i(576, 352)
visible = true
theme_override_styles/panel = SubResource("StyleBoxEmpty_xgdu4")
script = ExtResource("1_vapah")
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAoAAAAAAAEAAAAAAAsAAAABAAAAAAABAAoAAAABAAEAAAABAAsAAAACAAAAAAABAAoAAAACAAEAAAABAAsAAAADAAAAAAABAAoAAAADAAEAAAABAAsAAAAEAAAAAAABAAoAAAAEAAEAAAABAAsAAAAFAAAAAAABAAoAAAAFAAEAAAABAAsAAAAGAAAAAAABAAoAAAAGAAEAAAABAAsAAAAHAAAAAAABAAoAAAAHAAEAAAABAAsAAAAIAAAAAAABAAoAAAAIAAEAAAABAAsAAAAJAAAAAAABAAoAAAAJAAEAAAABAAsAAAAKAAAAAAABAAoAAAAKAAEAAAABAAsAAAALAAAAAAABAAoAAAALAAEAAAABAAsAAAAMAAAAAAABAAoAAAAMAAEAAAABAAsAAAANAAAAAAABAAoAAAANAAEAAAABAAsAAAAOAAAAAAABAAoAAAAOAAEAAAABAAsAAAAPAAAAAAABAAoAAAAPAAEAAAABAAsAAAAQAAAAAAABAAoAAAAQAAEAAAABAAsAAAARAAAAAAABAAoAAAARAAEAAAABAAsAAAASAAAAAAABAAoAAAASAAEAAAABAAsAAAATAAAAAAABAAoAAAATAAEAAAABAAsAAAAUAAAAAAABAAoAAAAUAAEAAAABAAsAAAAVAAAAAAABAAoAAAAVAAEAAAABAAsAAAAWAAAAAAABAAoAAAAWAAEAAAABAAsAAAAXAAAAAAABAAoAAAAXAAEAAAABAAsAAAAYAAAAAAABAAoAAAAYAAEAAAABAAsAAAAZAAAAAAABAAoAAAAZAAEAAAABAAsAAAAaAAAAAAABAAoAAAAaAAEAAAABAAsAAAAbAAAAAAABAAoAAAAbAAEAAAABAAsAAAAcAAAAAAABAAoAAAAcAAEAAAABAAsAAAAdAAAAAAABAAoAAAAdAAEAAAABAAsAAAAeAAAAAAABAAoAAAAeAAEAAAABAAsAAAAfAAAAAAABAAoAAAAfAAEAAAABAAsAAAAgAAAAAAABAAoAAAAgAAEAAAABAAsAAAAiAAAAAAAFAAoAAAAiAAEAAAAFAAsAAAAiAAIAAAAFAAwAAAAiAAMAAAAFAA0AAAAhAAAAAAABAAoAAAAhAAEAAAABAAsAAAAiAAQAAAAFAAsAAAAiAAUAAAAFAAwAAAAiAAYAAAAFAA0AAAAiAAcAAAAFAA4AAAAiAAgAAAAFAAsAAAAiAAkAAAAFAAwAAAAiAAoAAAAFAA0AAAAiAAsAAAAFAA4AAAAiAAwAAAAFAAsAAAAiAA0AAAAFAAwAAAAiAA4AAAAFAA0AAAAiAA8AAAAFAA0AAAAiABAAAAAFAA0AAAAiABEAAAAFAA0AAAAiABIAAAAFAA0AAAAiABMAAAAFAA0AAAAeABMAAAABAA4AAAAeABQAAAABAA4AAAAeABUAAAABAA8AAAAfABMAAAACAA4AAAAfABQAAAACAA4AAAAfABUAAAACAA8AAAAgABMAAAADAA4AAAAgABQAAAADAA4AAAAgABUAAAADAA8AAAAhABMAAAAEAA4AAAAhABQAAAAEAA4AAAAhABUAAAAEAA8AAAAiABQAAAAFAA4AAAAiABUAAAAFAA8AAAAaABMAAAABAA4AAAAaABQAAAABAA4AAAAaABUAAAABAA8AAAAbABMAAAACAA4AAAAbABQAAAACAA4AAAAbABUAAAACAA8AAAAcABMAAAADAA4AAAAcABQAAAADAA4AAAAcABUAAAADAA8AAAAdABMAAAAEAA4AAAAdABQAAAAEAA4AAAAdABUAAAAEAA8AAAAWABMAAAABAA4AAAAWABQAAAABAA4AAAAWABUAAAABAA8AAAAXABMAAAACAA4AAAAXABQAAAACAA4AAAAXABUAAAACAA8AAAAYABMAAAADAA4AAAAYABQAAAADAA4AAAAYABUAAAADAA8AAAAZABMAAAAEAA4AAAAZABQAAAAEAA4AAAAZABUAAAAEAA8AAAASABMAAAABAA4AAAASABQAAAABAA4AAAASABUAAAABAA8AAAATABMAAAACAA4AAAATABQAAAACAA4AAAATABUAAAACAA8AAAAUABMAAAADAA4AAAAUABQAAAADAA4AAAAUABUAAAADAA8AAAAVABMAAAAEAA4AAAAVABQAAAAEAA4AAAAVABUAAAAEAA8AAAAOABMAAAABAA4AAAAOABQAAAABAA4AAAAOABUAAAABAA8AAAAPABMAAAACAA4AAAAPABQAAAACAA4AAAAPABUAAAACAA8AAAAQABMAAAADAA4AAAAQABQAAAADAA4AAAAQABUAAAADAA8AAAARABMAAAAEAA4AAAARABQAAAAEAA4AAAARABUAAAAEAA8AAAAKABMAAAABAA4AAAAKABQAAAABAA4AAAAKABUAAAABAA8AAAALABMAAAACAA4AAAALABQAAAACAA4AAAALABUAAAACAA8AAAAMABMAAAADAA4AAAAMABQAAAADAA4AAAAMABUAAAADAA8AAAANABMAAAAEAA4AAAANABQAAAAEAA4AAAANABUAAAAEAA8AAAAGABMAAAABAA4AAAAGABQAAAABAA4AAAAGABUAAAABAA8AAAAHABMAAAACAA4AAAAHABQAAAACAA4AAAAHABUAAAACAA8AAAAIABMAAAADAA4AAAAIABQAAAADAA4AAAAIABUAAAADAA8AAAAJABMAAAAEAA4AAAAJABQAAAAEAA4AAAAJABUAAAAEAA8AAAACABMAAAABAA4AAAACABQAAAABAA4AAAACABUAAAABAA8AAAADABMAAAACAA4AAAADABQAAAACAA4AAAADABUAAAACAA8AAAAEABMAAAADAA4AAAAEABQAAAADAA4AAAAEABUAAAADAA8AAAAFABMAAAAEAA4AAAAFABQAAAAEAA4AAAAFABUAAAAEAA8AAAAAAAIAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAQAAAAAAA0AAAAAAAUAAAAAAA4AAAABAAIAAAABAAsAAAABAAMAAAABAAwAAAABAAQAAAABAA0AAAABAAUAAAABAA4AAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAwAAAAAAAgAAAAAAA0AAAAAAAkAAAAAAA4AAAABAAYAAAABAAsAAAABAAcAAAABAAwAAAABAAgAAAABAA0AAAABAAkAAAABAA4AAAAAAAoAAAAAAAsAAAAAAAsAAAAAAAwAAAAAAAwAAAAAAA0AAAAAAA0AAAAAAA4AAAABAAoAAAABAAsAAAABAAsAAAABAAwAAAABAAwAAAABAA0AAAABAA0AAAABAA4AAAAAAA4AAAAAAAsAAAAAAA8AAAAAAAwAAAAAABAAAAAAAA0AAAAAABEAAAAAAA4AAAABAA4AAAABAAsAAAABAA8AAAABAAwAAAABABAAAAABAA0AAAABABEAAAABAA4AAAAAABMAAAAAAA0AAAAAABQAAAAAAA4AAAAAABUAAAAAAA8AAAABABMAAAABAA0AAAABABQAAAABAA4AAAABABUAAAABAA8AAAAAABIAAAAAAA0AAAABABIAAAABAA0AAAACAAIAAAABAAwAAAACAAMAAAABAA0AAAACAAQAAAABAA4AAAADAAIAAAACAAwAAAADAAMAAAACAA0AAAADAAQAAAACAA4AAAAEAAIAAAADAAwAAAAEAAMAAAADAA0AAAAEAAQAAAADAA4AAAAFAAIAAAAEAAwAAAAFAAMAAAAEAA0AAAAFAAQAAAAEAA4AAAAGAAIAAAABAAwAAAAGAAMAAAABAA0AAAAGAAQAAAABAA4AAAAHAAIAAAACAAwAAAAHAAMAAAACAA0AAAAHAAQAAAACAA4AAAAIAAIAAAADAAwAAAAIAAMAAAADAA0AAAAIAAQAAAADAA4AAAAJAAIAAAAEAAwAAAAJAAMAAAAEAA0AAAAJAAQAAAAEAA4AAAAKAAIAAAABAAwAAAAKAAMAAAABAA0AAAAKAAQAAAABAA4AAAALAAIAAAACAAwAAAALAAMAAAACAA0AAAALAAQAAAACAA4AAAAMAAIAAAADAAwAAAAMAAMAAAADAA0AAAAMAAQAAAADAA4AAAANAAIAAAAEAAwAAAANAAMAAAAEAA0AAAANAAQAAAAEAA4AAAAOAAIAAAABAAwAAAAOAAMAAAABAA0AAAAOAAQAAAABAA4AAAAPAAIAAAACAAwAAAAPAAMAAAACAA0AAAAPAAQAAAACAA4AAAAQAAIAAAADAAwAAAAQAAMAAAADAA0AAAAQAAQAAAADAA4AAAARAAIAAAAEAAwAAAARAAMAAAAEAA0AAAARAAQAAAAEAA4AAAASAAIAAAABAAwAAAASAAMAAAABAA0AAAASAAQAAAABAA4AAAATAAIAAAACAAwAAAATAAMAAAACAA0AAAATAAQAAAACAA4AAAAUAAIAAAADAAwAAAAUAAMAAAADAA0AAAAUAAQAAAADAA4AAAAVAAIAAAAEAAwAAAAVAAMAAAAEAA0AAAAVAAQAAAAEAA4AAAAWAAIAAAABAAwAAAAWAAMAAAABAA0AAAAWAAQAAAABAA4AAAAXAAIAAAACAAwAAAAXAAMAAAACAA0AAAAXAAQAAAACAA4AAAAYAAIAAAADAAwAAAAYAAMAAAADAA0AAAAYAAQAAAADAA4AAAAZAAIAAAAEAAwAAAAZAAMAAAAEAA0AAAAZAAQAAAAEAA4AAAAaAAIAAAABAAwAAAAaAAMAAAABAA0AAAAaAAQAAAABAA4AAAAbAAIAAAACAAwAAAAbAAMAAAACAA0AAAAbAAQAAAACAA4AAAAcAAIAAAADAAwAAAAcAAMAAAADAA0AAAAcAAQAAAADAA4AAAAdAAIAAAAEAAwAAAAdAAMAAAAEAA0AAAAdAAQAAAAEAA4AAAAeAAIAAAABAAwAAAAeAAMAAAABAA0AAAAeAAQAAAABAA4AAAAfAAIAAAACAAwAAAAfAAMAAAACAA0AAAAfAAQAAAACAA4AAAAgAAIAAAADAAwAAAAgAAMAAAADAA0AAAAgAAQAAAADAA4AAAAhAAIAAAAEAAwAAAAhAAMAAAAEAA0AAAAhAAQAAAAEAA4AAAACAAUAAAABAAwAAAACAAYAAAABAA0AAAACAAcAAAABAA4AAAADAAUAAAACAAwAAAADAAYAAAACAA0AAAADAAcAAAACAA4AAAAEAAUAAAADAAwAAAAEAAYAAAADAA0AAAAEAAcAAAADAA4AAAAFAAUAAAAEAAwAAAAFAAYAAAAEAA0AAAAFAAcAAAAEAA4AAAAGAAUAAAABAAwAAAAGAAYAAAABAA0AAAAGAAcAAAABAA4AAAAHAAUAAAACAAwAAAAHAAYAAAACAA0AAAAHAAcAAAACAA4AAAAIAAUAAAADAAwAAAAIAAYAAAADAA0AAAAIAAcAAAADAA4AAAAJAAUAAAAEAAwAAAAJAAYAAAAEAA0AAAAJAAcAAAAEAA4AAAAKAAUAAAABAAwAAAAKAAYAAAABAA0AAAAKAAcAAAABAA4AAAALAAUAAAACAAwAAAALAAYAAAACAA0AAAALAAcAAAACAA4AAAAMAAUAAAADAAwAAAAMAAYAAAADAA0AAAAMAAcAAAADAA4AAAANAAUAAAAEAAwAAAANAAYAAAAEAA0AAAANAAcAAAAEAA4AAAAOAAUAAAABAAwAAAAOAAYAAAABAA0AAAAOAAcAAAABAA4AAAAPAAUAAAACAAwAAAAPAAYAAAACAA0AAAAPAAcAAAACAA4AAAAQAAUAAAADAAwAAAAQAAYAAAADAA0AAAAQAAcAAAADAA4AAAARAAUAAAAEAAwAAAARAAYAAAAEAA0AAAARAAcAAAAEAA4AAAASAAUAAAABAAwAAAASAAYAAAABAA0AAAASAAcAAAABAA4AAAATAAUAAAACAAwAAAATAAYAAAACAA0AAAATAAcAAAACAA4AAAAUAAUAAAADAAwAAAAUAAYAAAADAA0AAAAUAAcAAAADAA4AAAAVAAUAAAAEAAwAAAAVAAYAAAAEAA0AAAAVAAcAAAAEAA4AAAAWAAUAAAABAAwAAAAWAAYAAAABAA0AAAAWAAcAAAABAA4AAAAXAAUAAAACAAwAAAAXAAYAAAACAA0AAAAXAAcAAAACAA4AAAAYAAUAAAADAAwAAAAYAAYAAAADAA0AAAAYAAcAAAADAA4AAAAZAAUAAAAEAAwAAAAZAAYAAAAEAA0AAAAZAAcAAAAEAA4AAAAaAAUAAAABAAwAAAAaAAYAAAABAA0AAAAaAAcAAAABAA4AAAAbAAUAAAACAAwAAAAbAAYAAAACAA0AAAAbAAcAAAACAA4AAAAcAAUAAAADAAwAAAAcAAYAAAADAA0AAAAcAAcAAAADAA4AAAAdAAUAAAAEAAwAAAAdAAYAAAAEAA0AAAAdAAcAAAAEAA4AAAAeAAUAAAABAAwAAAAeAAYAAAABAA0AAAAeAAcAAAABAA4AAAAfAAUAAAACAAwAAAAfAAYAAAACAA0AAAAfAAcAAAACAA4AAAAgAAUAAAADAAwAAAAgAAYAAAADAA0AAAAgAAcAAAADAA4AAAAhAAUAAAAEAAwAAAAhAAYAAAAEAA0AAAAhAAcAAAAEAA4AAAACAAgAAAABAAwAAAACAAkAAAABAA0AAAACAAoAAAABAA4AAAADAAgAAAACAAwAAAADAAkAAAACAA0AAAADAAoAAAACAA4AAAAEAAgAAAADAAwAAAAEAAkAAAADAA0AAAAEAAoAAAADAA4AAAAFAAgAAAAEAAwAAAAFAAkAAAAEAA0AAAAFAAoAAAAEAA4AAAAGAAgAAAABAAwAAAAGAAkAAAABAA0AAAAGAAoAAAABAA4AAAAHAAgAAAACAAwAAAAHAAkAAAACAA0AAAAHAAoAAAACAA4AAAAIAAgAAAADAAwAAAAIAAkAAAADAA0AAAAIAAoAAAADAA4AAAAJAAgAAAAEAAwAAAAJAAkAAAAEAA0AAAAJAAoAAAAEAA4AAAAKAAgAAAABAAwAAAAKAAkAAAABAA0AAAAKAAoAAAABAA4AAAALAAgAAAACAAwAAAALAAkAAAACAA0AAAALAAoAAAACAA4AAAAMAAgAAAADAAwAAAAMAAkAAAADAA0AAAAMAAoAAAADAA4AAAANAAgAAAAEAAwAAAANAAkAAAAEAA0AAAANAAoAAAAEAA4AAAAOAAgAAAABAAwAAAAOAAkAAAABAA0AAAAOAAoAAAABAA4AAAAPAAgAAAACAAwAAAAPAAkAAAACAA0AAAAPAAoAAAACAA4AAAAQAAgAAAADAAwAAAAQAAkAAAADAA0AAAAQAAoAAAADAA4AAAARAAgAAAAEAAwAAAARAAkAAAAEAA0AAAARAAoAAAAEAA4AAAASAAgAAAABAAwAAAASAAkAAAABAA0AAAASAAoAAAABAA4AAAATAAgAAAACAAwAAAATAAkAAAACAA0AAAATAAoAAAACAA4AAAAUAAgAAAADAAwAAAAUAAkAAAADAA0AAAAUAAoAAAADAA4AAAAVAAgAAAAEAAwAAAAVAAkAAAAEAA0AAAAVAAoAAAAEAA4AAAAWAAgAAAABAAwAAAAWAAkAAAABAA0AAAAWAAoAAAABAA4AAAAXAAgAAAACAAwAAAAXAAkAAAACAA0AAAAXAAoAAAACAA4AAAAYAAgAAAADAAwAAAAYAAkAAAADAA0AAAAYAAoAAAADAA4AAAAZAAgAAAAEAAwAAAAZAAkAAAAEAA0AAAAZAAoAAAAEAA4AAAAaAAgAAAABAAwAAAAaAAkAAAABAA0AAAAaAAoAAAABAA4AAAAbAAgAAAACAAwAAAAbAAkAAAACAA0AAAAbAAoAAAACAA4AAAAcAAgAAAADAAwAAAAcAAkAAAADAA0AAAAcAAoAAAADAA4AAAAdAAgAAAAEAAwAAAAdAAkAAAAEAA0AAAAdAAoAAAAEAA4AAAAeAAgAAAABAAwAAAAeAAkAAAABAA0AAAAeAAoAAAABAA4AAAAfAAgAAAACAAwAAAAfAAkAAAACAA0AAAAfAAoAAAACAA4AAAAgAAgAAAADAAwAAAAgAAkAAAADAA0AAAAgAAoAAAADAA4AAAAhAAgAAAAEAAwAAAAhAAkAAAAEAA0AAAAhAAoAAAAEAA4AAAACAAsAAAABAAwAAAACAAwAAAABAA0AAAACAA0AAAABAA4AAAADAAsAAAACAAwAAAADAAwAAAACAA0AAAADAA0AAAACAA4AAAAEAAsAAAADAAwAAAAEAAwAAAADAA0AAAAEAA0AAAADAA4AAAAFAAsAAAAEAAwAAAAFAAwAAAAEAA0AAAAFAA0AAAAEAA4AAAAGAAsAAAABAAwAAAAGAAwAAAABAA0AAAAGAA0AAAABAA4AAAAHAAsAAAACAAwAAAAHAAwAAAACAA0AAAAHAA0AAAACAA4AAAAIAAsAAAADAAwAAAAIAAwAAAADAA0AAAAIAA0AAAADAA4AAAAJAAsAAAAEAAwAAAAJAAwAAAAEAA0AAAAJAA0AAAAEAA4AAAAKAAsAAAABAAwAAAAKAAwAAAABAA0AAAAKAA0AAAABAA4AAAALAAsAAAACAAwAAAALAAwAAAACAA0AAAALAA0AAAACAA4AAAAMAAsAAAADAAwAAAAMAAwAAAADAA0AAAAMAA0AAAADAA4AAAANAAsAAAAEAAwAAAANAAwAAAAEAA0AAAANAA0AAAAEAA4AAAAOAAsAAAABAAwAAAAOAAwAAAABAA0AAAAOAA0AAAABAA4AAAAPAAsAAAACAAwAAAAPAAwAAAACAA0AAAAPAA0AAAACAA4AAAAQAAsAAAADAAwAAAAQAAwAAAADAA0AAAAQAA0AAAADAA4AAAARAAsAAAAEAAwAAAARAAwAAAAEAA0AAAARAA0AAAAEAA4AAAASAAsAAAABAAwAAAASAAwAAAABAA0AAAASAA0AAAABAA4AAAATAAsAAAACAAwAAAATAAwAAAACAA0AAAATAA0AAAACAA4AAAAUAAsAAAADAAwAAAAUAAwAAAADAA0AAAAUAA0AAAADAA4AAAAVAAsAAAAEAAwAAAAVAAwAAAAEAA0AAAAVAA0AAAAEAA4AAAAWAAsAAAABAAwAAAAWAAwAAAABAA0AAAAWAA0AAAABAA4AAAAXAAsAAAACAAwAAAAXAAwAAAACAA0AAAAXAA0AAAACAA4AAAAYAAsAAAADAAwAAAAYAAwAAAADAA0AAAAYAA0AAAADAA4AAAAZAAsAAAAEAAwAAAAZAAwAAAAEAA0AAAAZAA0AAAAEAA4AAAAaAAsAAAABAAwAAAAaAAwAAAABAA0AAAAaAA0AAAABAA4AAAAbAAsAAAACAAwAAAAbAAwAAAACAA0AAAAbAA0AAAACAA4AAAAcAAsAAAADAAwAAAAcAAwAAAADAA0AAAAcAA0AAAADAA4AAAAdAAsAAAAEAAwAAAAdAAwAAAAEAA0AAAAdAA0AAAAEAA4AAAAeAAsAAAABAAwAAAAeAAwAAAABAA0AAAAeAA0AAAABAA4AAAAfAAsAAAACAAwAAAAfAAwAAAACAA0AAAAfAA0AAAACAA4AAAAgAAsAAAADAAwAAAAgAAwAAAADAA0AAAAgAA0AAAADAA4AAAAhAAsAAAAEAAwAAAAhAAwAAAAEAA0AAAAhAA0AAAAEAA4AAAACAA4AAAABAAwAAAACAA8AAAABAA0AAAACABAAAAABAA4AAAADAA4AAAACAAwAAAADAA8AAAACAA0AAAADABAAAAACAA4AAAAEAA4AAAADAAwAAAAEAA8AAAADAA0AAAAEABAAAAADAA4AAAAFAA4AAAAEAAwAAAAFAA8AAAAEAA0AAAAFABAAAAAEAA4AAAAGAA4AAAABAAwAAAAGAA8AAAABAA0AAAAGABAAAAABAA4AAAAHAA4AAAACAAwAAAAHAA8AAAACAA0AAAAHABAAAAACAA4AAAAIAA4AAAADAAwAAAAIAA8AAAADAA0AAAAIABAAAAADAA4AAAAJAA4AAAAEAAwAAAAJAA8AAAAEAA0AAAAJABAAAAAEAA4AAAAKAA4AAAABAAwAAAAKAA8AAAABAA0AAAAKABAAAAABAA4AAAALAA4AAAACAAwAAAALAA8AAAACAA0AAAALABAAAAACAA4AAAAMAA4AAAADAAwAAAAMAA8AAAADAA0AAAAMABAAAAADAA4AAAANAA4AAAAEAAwAAAANAA8AAAAEAA0AAAANABAAAAAEAA4AAAAOAA4AAAABAAwAAAAOAA8AAAABAA0AAAAOABAAAAABAA4AAAAPAA4AAAACAAwAAAAPAA8AAAACAA0AAAAPABAAAAACAA4AAAAQAA4AAAADAAwAAAAQAA8AAAADAA0AAAAQABAAAAADAA4AAAARAA4AAAAEAAwAAAARAA8AAAAEAA0AAAARABAAAAAEAA4AAAASAA4AAAABAAwAAAASAA8AAAABAA0AAAASABAAAAABAA4AAAATAA4AAAACAAwAAAATAA8AAAACAA0AAAATABAAAAACAA4AAAAUAA4AAAADAAwAAAAUAA8AAAADAA0AAAAUABAAAAADAA4AAAAVAA4AAAAEAAwAAAAVAA8AAAAEAA0AAAAVABAAAAAEAA4AAAAWAA4AAAABAAwAAAAWAA8AAAABAA0AAAAWABAAAAABAA4AAAAXAA4AAAACAAwAAAAXAA8AAAACAA0AAAAXABAAAAACAA4AAAAYAA4AAAADAAwAAAAYAA8AAAADAA0AAAAYABAAAAADAA4AAAAZAA4AAAAEAAwAAAAZAA8AAAAEAA0AAAAZABAAAAAEAA4AAAAaAA4AAAABAAwAAAAaAA8AAAABAA0AAAAaABAAAAABAA4AAAAbAA4AAAACAAwAAAAbAA8AAAACAA0AAAAbABAAAAACAA4AAAAcAA4AAAADAAwAAAAcAA8AAAADAA0AAAAcABAAAAADAA4AAAAdAA4AAAAEAAwAAAAdAA8AAAAEAA0AAAAdABAAAAAEAA4AAAAeAA4AAAABAAwAAAAeAA8AAAABAA0AAAAeABAAAAABAA4AAAAfAA4AAAABAAwAAAAfAA8AAAABAA0AAAAfABAAAAABAA4AAAAgAA4AAAACAAwAAAAgAA8AAAACAA0AAAAgABAAAAACAA4AAAAhAA4AAAADAAwAAAAhAA8AAAADAA0AAAAhABAAAAADAA4AAAACABEAAAABAAwAAAACABIAAAABAA0AAAADABEAAAACAAwAAAADABIAAAACAA0AAAAEABEAAAADAAwAAAAEABIAAAADAA0AAAAFABEAAAAEAAwAAAAFABIAAAAEAA0AAAAGABEAAAABAAwAAAAGABIAAAABAA0AAAAHABEAAAACAAwAAAAHABIAAAACAA0AAAAIABEAAAADAAwAAAAIABIAAAADAA0AAAAJABEAAAAEAAwAAAAJABIAAAAEAA0AAAAKABEAAAABAAwAAAAKABIAAAABAA0AAAALABEAAAACAAwAAAALABIAAAACAA0AAAAMABEAAAADAAwAAAAMABIAAAADAA0AAAANABEAAAAEAAwAAAANABIAAAAEAA0AAAASABEAAAABAAwAAAASABIAAAABAA0AAAATABEAAAACAAwAAAATABIAAAACAA0AAAAUABEAAAADAAwAAAAUABIAAAADAA0AAAAVABEAAAAEAAwAAAAVABIAAAAEAA0AAAAWABEAAAABAAwAAAAWABIAAAABAA0AAAAXABEAAAACAAwAAAAXABIAAAACAA0AAAAYABEAAAADAAwAAAAYABIAAAADAA0AAAAZABEAAAAEAAwAAAAZABIAAAAEAA0AAAAaABEAAAABAAwAAAAaABIAAAABAA0AAAAbABEAAAACAAwAAAAbABIAAAACAA0AAAAcABEAAAADAAwAAAAcABIAAAADAA0AAAAdABEAAAAEAAwAAAAdABIAAAAEAA0AAAAeABEAAAABAAwAAAAeABIAAAABAA0AAAAfABEAAAACAAwAAAAfABIAAAACAA0AAAAgABEAAAADAAwAAAAgABIAAAADAA0AAAAhABEAAAAEAAwAAAAhABIAAAAEAA0AAAAOABEAAAABAAwAAAAOABIAAAABAA0AAAAPABEAAAACAAwAAAAPABIAAAACAA0AAAAQABEAAAADAAwAAAAQABIAAAADAA0AAAARABEAAAAEAAwAAAARABIAAAAEAA0AAAA=")
tile_set = ExtResource("2_xgdu4")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 576.0
offset_bottom = 352.0
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 38

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("3_t2kod")
theme_override_font_sizes/font_size = 32
text = "End of Day"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Profit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "Total Profit:"

[node name="ProfitTotal" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "100"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Revenue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "Total Revenue:"

[node name="RevenueTotal" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "100"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Expenses" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "Total Expenses:"

[node name="ExpensesTotal" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.247059, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_pb7u7")
theme_override_font_sizes/font_size = 32
text = "100"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/focus = SubResource("StyleBoxEmpty_2kek1")
theme_override_styles/hover = SubResource("StyleBoxTexture_25iga")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ao0as")
theme_override_styles/normal = SubResource("StyleBoxTexture_8ik8l")

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 70)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/focus = SubResource("StyleBoxEmpty_ow6ah")
theme_override_styles/hover = SubResource("StyleBoxTexture_f8waa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kha7j")
theme_override_styles/normal = SubResource("StyleBoxTexture_y4y66")

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
